# concealed_ilwe

./: .gitignore  Dockerfile  README.md  attack.ipynb  demo.py  docker-compose.yml  methods_numpy.py  plot.py  regression.py  sampler.py  simulation_umts24.py
attack/: attack.ipynb  requirements_attack.txt
attack/attack/: capture.py  helper.py  recover_key.py
attack/attack/data_generator/include/attack/: data_generator.h
attack/attack/data_generator/src/: CMakeLists.txt  dilithium_gadgets.c  masked_sign.c
attack/attack/firmware/: firmware.c
attack/data_generator/: CMakeLists.txt  build.sh
attack/data_generator/include/attack/: data_generator.hpp
attack/data_generator/src/: data_generator.cpp  sign.c
attack/firmware/: makefile
regression/: Dockerfile  init.sql  plot.py  regression.py  requirements.txt
simulation_umts24/: simulation_umts24.py
